# docs/swagger.yaml
@@ -10,10 +10,6 @@ definitions:
     type: object
   models.Contract:
     properties:
-      address:
-        type: string
-      adminAddr:
-        type: string
       contractHistoryArr:
         items:
           $ref: '#/definitions/models.ContractHistory'
@@ -29,7 +25,12 @@ definitions:
       name:
         type: string
       network:
+        description: chain id
         type: integer
+      proxyAddress:
+        type: string
+      proxyOwner:
+        type: string
       updatedAt:
         type: integer
       userID:
@@ -44,6 +45,7 @@ definitions:
       id:
         type: integer
       network:
+        description: chain id
         type: integer
       newOwner:
         type: string
@@ -79,16 +81,15 @@ definitions:
     type: object
   request.Contract:
     properties:
-      contractAddr:
-        type: string
-      contractAdmin:
-        type: string
       contractName:
         type: string
       email:
         type: string
       network:
+        description: chain id
         type: integer
+      proxyAddress:
+        type: string
     type: object
   request.Login:
     properties:
